--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -58,6 +58,12 @@
               </span>
             </a>
           </li>
+          <li>
+              <a href="/charttopsell"><i class="fa fa-line-chart"></i> Hàng Bán Chạy
+                <span class="pull-right-container">
+                </span>
+              </a>
+            </li>
         </ul>
       </li>
 
