[main-page] fix bug checkbox promotion search

--- a/main-page/views/product/product_search.ejs
+++ b/main-page/views/product/product_search.ejs
@@ -39,7 +39,7 @@
                             <label  class="col-sm-2 col-md-2 col-form-label">Khuyến mãi</label>
                           <div class="col-sm-10">
                             <div class="form-check">
-                              <input class="form-check-input" name="promotion" value="true" type="checkbox" id="gridCheck1">
+                              <input class="form-check-input" name="promotion" value="false" type="checkbox" id="gridCheck1">
                               <label class="form-check-label" for="gridCheck1">
                                 Có
                               </label>
