--- a/main-page/views/home/promotion.ejs
+++ b/main-page/views/home/promotion.ejs
@@ -11,7 +11,7 @@
                     <img src="/img/promo-banner-1.jpg" alt="img">                    
                     <div class="aa-prom-content">
                       <span>75% Off</span>
-                      <h4><a href="#">Street Style</a></h4>                      
+                      <h4>Street Style</h4>                      
                     </div>
                   </div>
                 </div>
@@ -24,7 +24,7 @@
                       <img src="/img/promo-banner-3.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <span>Exclusive Item</span>
-                        <h4><a href="#">For Men</a></h4>                        
+                        <h4>For Men</h4>                        
                       </div>
                     </div>
                   </div>
@@ -33,7 +33,7 @@
                       <img src="/img/promo-banner-2.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <span>Sale Off</span>
-                        <h4><a href="#">On Shoes</a></h4>                        
+                        <h4>On Shoes</h4>                        
                       </div>
                     </div>
                   </div>
@@ -42,7 +42,7 @@
                       <img src="/img/promo-banner-4.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <span>New Arrivals</span>
-                        <h4><a href="#">New Trend</a></h4>                        
+                        <h4>New Trend</h4>                        
                       </div>
                     </div>
                   </div>
@@ -51,7 +51,7 @@
                       <img src="/img/promo-banner-5.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <span>25% Off</span>
-                        <h4><a href="#">For Bags</a></h4>                        
+                        <h4>For Bags</h4>                        
                       </div>
                     </div>
                   </div>
