--- a/main-page/views/product/product_search.ejs
+++ b/main-page/views/product/product_search.ejs
@@ -12,7 +12,7 @@
                         <div class="form-group row">
                           <label for="query" class="col-sm-2 col-md-2 col-form-label">Nội dung</label>
                           <div class="col-md-10" style="padding-left:0">
-                            <input  class="form-control" id="query" name="query" placeholder="Nội ding tìm kiếm....">
+                            <input  class="form-control" id="query" name="query" placeholder="Tên sản phẩm....">
                           </div>
                         </div>
                         <div class="form-group row">
@@ -28,12 +28,12 @@
                         </div>
                         <div class="form-group row">
                             <label  class="col-sm-2 col-md-2 col-form-label">Giá</label>
-                            <input type="number" name="minVal" class="col-sm-2 col-md-2" value="25000" min="0" max="250000"/>
+                            <input type="number" name="minVal" class="col-sm-2 col-md-2" value="0" min="0" max="250000"/>
                             <div class="range-slider col-md-6 col-sm-6">
-                                  <input value="100000" min="0" max="250000" step="500" type="range"/>
-                                  <input value="150000" min="0" max="1000000" step="500" type="range"/> 
+                                  <input value="0" min="0" max="250000" step="500" type="range"/>
+                                  <input value="1000000" min="0" max="10000000" step="500" type="range"/> 
                             </div>
-                            <input type="number" name="maxVal" class="col-sm-2 col-md-2" value="50000" min="0" max="1000000"/>
+                            <input type="number" name="maxVal" class="col-sm-2 col-md-2" value="1000000" min="0" max="10000000"/>
                         </div>
                         <div class="form-group row">
                             <label  class="col-sm-2 col-md-2 col-form-label">Khuyến mãi</label>
