fix forgot password don't work and check match password in update password

--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -231,7 +231,7 @@
             <form class="aa-login-form" action="/user/reset" method="POST" height="50px">
               <label for="">Email<span>*</span></label>
               <input type="text" id="email" name="email" placeholder="Email">
-              <button class="aa-browse-btn" data-dismiss="modal" type="submit" value="submit">Xác minh</button>
+              <button class="aa-browse-btn" type="submit" value="submit">Xác minh</button>
             </form>
           </div>
         </div><!-- /.modal-content -->
