--- a/main-page/views/common/header.ejs
+++ b/main-page/views/common/header.ejs
@@ -12,7 +12,7 @@
 
                 <a href="/">
                   <span class="fa fa-shopping-cart"></span>
-                  <p>daily<strong>Shop</strong> <span>Your Shopping Partner</span></p>
+                  <p>SCTT<strong>Shop</strong> <span>Your Shopping Partner</span></p>
                 </a>
                 <!-- img based logo -->
                 <!-- <a href="#"><img src="/img/logo.jpg" alt="logo img"></a> -->
