--- a/admin-page/views/order/order.ejs
+++ b/admin-page/views/order/order.ejs
@@ -14,42 +14,44 @@
       <section class="content">
 
         <div id="orders">
-          <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12">
 
-            <!-- TABLE: LATEST ORDERS -->
-            <div class="box box-info">
-              <div class="box-header with-border">
-                <h3 class="box-title">Danh Sách Đơn Hàng</h3>
+              <!-- TABLE: LATEST ORDERS -->
+              <div class="box box-info">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Danh Sách Đơn Hàng</h3>
 
-                <div class="box-tools pull-right">
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="remove"><i
-                      class="fa fa-times"></i></button>
-                </div>
-              </div>
-
-              <div class="box-body">
-                <div class="table-responsive">
-                  <table id="orderTable" style="width:100%;" class="table no-margin table-striped table-hover">
-                    <thead>
-                      <tr>
-                        <th>Mã Đơn Hàng</th>
-                        <th>Ngày Mua Hàng</th>
-                        <th style="width:10%;">Khách Hàng</th>
-                        <th>Chi Tiết Đơn Hàng</th>
-                        <th>Tổng Giá Trị</th>
-                        <th>Địa Chỉ Giao Hàng</th>
-                        <th>Trạng Thái</th>
-                        <th>Thông Tin Phụ</th>
-                        <th>Cập Nhật</th>
-                      </tr>
-                    </thead>
-                  </table>
+                  <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i
+                        class="fa fa-times"></i></button>
+                  </div>
                 </div>
 
-              </div>
+                <div class="box-body">
+                  <div class="table-responsive">
+                    <table id="orderTable" style="width:100%;" class="table no-margin table-striped table-hover">
+                      <thead>
+                        <tr>
+                          <th>Mã Đơn Hàng</th>
+                          <th>Ngày Mua Hàng</th>
+                          <th style="width:10%;">Khách Hàng</th>
+                          <th>Chi Tiết Đơn Hàng</th>
+                          <th>Tổng Giá Trị</th>
+                          <th>Địa Chỉ Giao Hàng</th>
+                          <th>Trạng Thái</th>
+                          <th>Thông Tin Phụ</th>
+                          <th>Cập Nhật</th>
+                        </tr>
+                      </thead>
+                    </table>
+                  </div>
 
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
