--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -50,8 +50,8 @@
             </div>
 
             <div class="modal-body">
-                    <form id="forminsertuseravatar" action="/upload" method="POST" enctype="multipart/form-data">
-                    </form>
+                <form id="forminsertuseravatar" action="/upload" method="POST" enctype="multipart/form-data">
+                </form>
                 <form action="#" method="POST" id="forminsertuser">
                     <div class="form-group">
                         <label for="id" class="control-label">Tên Đăng Nhập:</label>
@@ -74,15 +74,15 @@
                         <input type="text" class="form-control" id="email" name="email">
                     </div>
                     <div class="form-group">
-                            <label for="avatar" class="control-label">URL Ảnh Đại Diện:</label>
-                            <div style="display: flex;flex-direction: row;">
-                                <input type="text" class="form-control" id="avatar" name="avatar">
-                                <input style="width:50%; margin-left:10px; align-self: center;" type="file"
-                                    name="userAvatar" accept="image/png, image/jpeg"
-                                    onchange="uploadImage('#forminsertuseravatar','#dlginsertuser input[name=\'avatar\']');return false;"
-                                    form="forminsertuseravatar">
-                            </div>
+                        <label for="avatar" class="control-label">URL Ảnh Đại Diện:</label>
+                        <div style="display: flex;flex-direction: row;">
+                            <input type="text" class="form-control" id="avatar" name="avatar">
+                            <input style="width:50%; margin-left:10px; align-self: center;" type="file"
+                                name="userAvatar" accept="image/png, image/jpeg"
+                                onchange="uploadImage('#forminsertuseravatar','#dlginsertuser input[name=\'avatar\']');return false;"
+                                form="forminsertuseravatar">
                         </div>
+                    </div>
                     <div class="form-group">
                         <label for="birthDate" class="control-label">Ngày Sinh:</label>
                         <div class='input-group date date-picker2'>
@@ -138,7 +138,8 @@
                         <label for="id" class="control-label">Tên Đăng Nhập:</label>
                         <input type="text" class="form-control" id="username" name="username" readonly required>
                     </div>
-                    <input type="text" style="display:none;" class="form-control" id="status" name="status" readonly required>
+                    <input type="text" style="display:none;" class="form-control" id="status" name="status" readonly
+                        required>
 
                     <button type="submit" onclick="handleUpdateUserAccount(); return false;" class="btn btn-info"
                         data-dismiss="modal">OK</button>
@@ -151,40 +152,40 @@
 </div>
 
 <div id="dlgupdateuserrole" class="modal fade" role="dialog">
-        <div class="modal-dialog" style="padding-top: 10%;">
-    
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Phân Quyền Tài Khoản</h4>
-                </div>
-    
-                <div class="modal-body">
-                    <form action="#" method="POST" id="formupdateuserrole">
-                        <div class="form-group">
-                            <label for="id" class="control-label">Tên Đăng Nhập:</label>
-                            <input type="text" class="form-control" id="username" name="username" readonly required>
-                        </div>
-                        <div class="form-group">
-                                <label for="role" class="control-label">Cấp Độ:</label>
-                                <select id="role" name="role">
-                                    <option value="ADMIN" selected>Quản Trị Viên</option>
-                                    <option value="MANAGER">Quản Lý</option>
-                                    <option value="USER">Người Dùng</option>
-                                </select>
-                            </div>
-                       
-                        <button type="submit" onclick="handleUpdateUserRole(); return false;" class="btn btn-info"
-                            data-dismiss="modal">OK</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-                    </form>
-                </div>
-    
+    <div class="modal-dialog" style="padding-top: 10%;">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Phân Quyền Tài Khoản</h4>
             </div>
+
+            <div class="modal-body">
+                <form action="#" method="POST" id="formupdateuserrole">
+                    <div class="form-group">
+                        <label for="id" class="control-label">Tên Đăng Nhập:</label>
+                        <input type="text" class="form-control" id="username" name="username" readonly required>
+                    </div>
+                    <div class="form-group">
+                        <label for="role" class="control-label">Cấp Độ:</label>
+                        <select id="role" name="role">
+                            <option value="ADMIN" selected>Quản Trị Viên</option>
+                            <option value="MANAGER">Quản Lý</option>
+                            <option value="USER">Người Dùng</option>
+                        </select>
+                    </div>
+
+                    <button type="submit" onclick="handleUpdateUserRole(); return false;" class="btn btn-info"
+                        data-dismiss="modal">OK</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+
         </div>
     </div>
+</div>
 
 <div id="dlgverifyuser" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
@@ -203,7 +204,7 @@
                         <label for="id" class="control-label">Tên Đăng Nhập:</label>
                         <input type="text" class="form-control" id="username" name="username" readonly required>
                     </div>
-                   
+
                     <button type="submit" onclick="handleVerifyUser(); return false;" class="btn btn-info"
                         data-dismiss="modal">OK</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
@@ -357,7 +358,10 @@
                     <div class="form-group" style="display: none">
                         <input type="text" class="form-control" name="avatar" readonly required>
                     </div>
-
+                    <div class="form-group">
+                        <label for="password" class="control-label">Mật Khẩu Cũ:</label>
+                        <input type="password" class="form-control" name="oldpassword">
+                    </div>
                     <div class="form-group">
                         <label for="password" class="control-label">Mật Khẩu Mới:</label>
                         <input type="password" class="form-control" name="password">
