--- a/admin-page/views/customer/customerDialogs.ejs
+++ b/admin-page/views/customer/customerDialogs.ejs
@@ -16,7 +16,7 @@
                         <input type="text" class="form-control" name="email" readonly>
                     </div>
 
-                    <div class="form-group">
+                    <div style="display:none;" class="form-group">
                         <label class="control-label">UID:</label>
                         <input type="text" class="form-control" name="uid" readonly>
                     </div>
